--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://AUSTINE-542.github.io/react-gh-pages",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -30,7 +31,6 @@
     ],
     "development": [
       "last 1 chrome version",
-    
       "last 1 firefox version",
       "last 1 safari version"
     ]
