--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://AUSTINE-542.github.io/react-gh-pages",
+  "homepage": "https://austine-542.github.io/react-gh-pages",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
